courses/430_programming-languages/assignment-6/tests/error/hw5_error01.nex
print "should not get here:n";
1 / 0;
2(2);
